--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 
 [dependencies]
 bevy = "0.13.0"
+bevy-inspector-egui = "0.23.4"
+bevy_editor_pls = "0.8.1"
 bevy_rapier2d = "0.25.0"
 
 
