everything seems to be working. randomly blink

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -26,8 +26,8 @@ rustflags = [
 [target.aarch64-apple-darwin]
 rustflags = [
     "-Clink-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld", # Use LLD Linker
-    "-Zshare-generics=y",                                      # (Nightly) Make the current crate share its generic instantiations
-    "-Zthreads=0",                                             # (Nightly) Use improved multithreading with the recommended amount of threads.
+    # "-Zshare-generics=y",                                      # (Nightly) Make the current crate share its generic instantiations
+    # "-Zthreads=0",                                             # (Nightly) Use improved multithreading with the recommended amount of threads.
 ]
 
 [target.x86_64-pc-windows-msvc]
